...
                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                <items>
                                    <barButtonItem title="Add" image="plus" catalog="system" style="plain" id="XzI-NL-cQa" userLabel="Add">
                                        <connections>
                                            <segue destination="dJZ-NQ-wiO" kind="show" identifier="AddTransactionTemplateFormSegue" id="UQi-zy-E5x"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ORp-rs-rmv">
                                                        <rect key="frame" x="0.0" y="0.0" width="328" height="36"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="amountInputField"/>
                                                        <color key="textColor" systemColor="systemGreenColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                                        <state key="normal" title="+ / -"/>
                                                        <connections>
                                                            <action selector="signButtonPressed:" destination="dJZ-NQ-wiO" eventType="touchUpInside" id="Ixt-j5-i5g"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rjT-61-Pmg">
                                                <rect key="frame" x="0.0" y="44" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textInputField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
...
                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="11k-Zz-B4w">
                                                        <rect key="frame" x="325" y="0.0" width="51" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" label="recurringSwitch"/>
                                                    </switch>
                                                </subviews>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZc-4y-fQ6">
                                        <rect key="frame" x="20" y="145" width="374" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Submit"/>
...
